content/docs/0.8.x/reference/cli/commands/keptn_status.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn status"
slug: keptn_status
---
## keptn status

Checks the status of the CLI

### Synopsis

Checks the status of the CLI. This includes a test whether the CLI is authenticated against the Keptn API. 


```
keptn status [flags]
```

### Examples

```
keptn status
```

### Options

```
  -h, --help   help for status
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 19-Nov-2020
