content/docs/0.11.x/reference/cli/commands/keptn_status.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn status"
slug: keptn_status
---
## keptn status

Checks the status of the CLI

### Synopsis

Checks the status of the CLI. This includes a test whether the CLI is authenticated against the Keptn API. 


```
keptn status [flags]
```

### Examples

```
keptn status
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 25-Nov-2021
